feat(assembly-ui): added es, de json, updated en
closes: MP-3739

--- a/apps/assembly-ui/i18n/fr.json
+++ b/apps/assembly-ui/i18n/fr.json
@@ -60,7 +60,7 @@
     "caution": "MarIA.ne peut afficher des informations inexactes ou offensantes qui ne représentent pas les opinions du CESE. Charte Éthique IA Make.org",
     "themeAnswer": "Résumé des principales thématiques :",
     "warning": "La réponse, générée par une IA à partir de sources vérifiées, peut présenter des approximations.",
-    "me": "Moi",
+    "me": "Question posée",
     "themes": "Thématiques",
     "themesDiscover": "Découvrir l’ensemble des thématiques",
     "cancel": "Annuler",
