fix(assembly-ui): update es json to resolve weblate conflict

--- a/apps/assembly-ui/i18n/es.json
+++ b/apps/assembly-ui/i18n/es.json
@@ -61,14 +61,14 @@
   },
   "reassurance": {
     "main_title": "Comprenda temas complejos con facilidad",
-    "main_text": "@@reassurance.main_text|fr:Explorez l'intelligence artificielle qui vous accompagne dans la découverte des thématiques complexes.",
-    "what_title": "@@reassurance.what_title|fr:Notre outil, c’est quoi exactement ?",
-    "what_text": "@@reassurance.what_text|fr:Notre plateforme, alimentée par uniquement à partir de documents publics et certifiés, simplifie les sujets complexes grâce à différents niveaux de réponses adaptées à tous.",
-    "why": "@@reassurance.why|fr:Pourquoi ?",
-    "why_text": "@@reassurance.why_text|fr:Cet outil est une plateforme qui utilise l’Intelligence Artificielle pour rendre accessible la compréhension des sujets complexes pour les citoyens et faciliter leur participation active aux discussions démocratiques.",
-    "who": "@@reassurance.who|fr:Pour qui ?",
-    "who_text": "@@reassurance.who_text|fr:Si vous êtes un citoyen curieux, un journaliste cherchant une synthèse efficace, une personne concernée voulant des réponses claires, ou même un membre d'une institution, notre plateforme peut vous aider. Chacun peut ainsi trouver des informations adaptées à son niveau d'expertise sans se perdre dans des pages de documents spécialisés.",
-    "how_help": "@@reassurance.how_help|fr:Comment cet outil m’accompagne dans ma compréhension ?",
+    "main_text": "Explore la inteligencia artificial que mejora su comprensión.",
+    "what_title": "Permítanos presentarnos",
+    "what_text": "Nuestra plataforma, alimentada únicamente por documentos públicos y certificados, simplifica temas complejos con diferentes niveles de respuestas adaptadas a cada uno.",
+    "why": "¿Para qué sirve?",
+    "why_text": "Esta herramienta es una plataforma que utiliza Inteligencia Artificial para poner temas complejos al alcance de los ciudadanos y facilitar su participación activa en los debates democráticos.",
+    "who": "¿A quién va dirigida?",
+    "who_text": "Ya sea un ciudadano curioso, un periodista en busca de un resumen o un interesado en busca de respuestas claras, cada usuario puede encontrar información sin perderse en páginas de documentos especializados.",
+    "how_help": "Nuestra Inteligencia Artificial le guía en su viaje de aprendizaje",
     "sources_title": "@@reassurance.sources_title|fr:En s'appuyant sur des sources fiable",
     "sources_subtitle": "@@reassurance.sources_subtitle|fr:Notre IA utilise uniquement des documents publics et fiables pour formuler ses réponses.",
     "sources_text": "@@reassurance.sources_text|fr:Toutes les sources utilisées par notre Intelligence Artificielle sont soigneusement sélectionnées, vérifiées et modérées par Make.org. Priorisant les contenus vidéo, notre IA offre également la possibilité de rechercher spécifiquement parmi les documents retranscrits à l'issue des échanges. Les réponses que vous obtenez lors de votre expérience sur notre plateforme proviennent de documents publics. Ces réponses sont générées grâce à la technologie AI (basée sur un RAG - Retrieval-Augmented Generation) dont l'explication se trouve en bas de page.",
