--- a/apps/widget/i18n/da.json
+++ b/apps/widget/i18n/da.json
@@ -113,7 +113,8 @@
     "close": "Luk"
   },
   "header": {
-    "logo_alt": "Tilbage til Make.org’s startside"
+    "logo_alt": "Tilbage til Make.org’s startside",
+    "privacy_policy": "@@header.privacy_policy|fr:Confidentialité"
   },
   "proposal_card": {
     "next": "Næste forslag",
