--- a/apps/widget/i18n/nl.json
+++ b/apps/widget/i18n/nl.json
@@ -113,7 +113,8 @@
     "close": "Sluiten"
   },
   "header": {
-    "logo_alt": "Ga naar de homepage van Make.org"
+    "logo_alt": "Ga naar de homepage van Make.org",
+    "privacy_policy": "@@header.privacy_policy|fr:Confidentialité"
   },
   "proposal_card": {
     "next": "Volgend voorstel",
