--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -113,7 +113,8 @@
     "close": "Close"
   },
   "header": {
-    "logo_alt": "Go to the Make.org website"
+    "logo_alt": "Go to the Make.org website",
+    "privacy_policy": "@@header.privacy_policy|fr:Confidentialité"
   },
   "top_proposal_card": {
     "start": "Start to vote"
