--- a/apps/widget/i18n/fi.json
+++ b/apps/widget/i18n/fi.json
@@ -113,7 +113,8 @@
     "close": "Sulje"
   },
   "header": {
-    "logo_alt": "Siirry Make.orgin kotisivulle"
+    "logo_alt": "Siirry Make.orgin kotisivulle",
+    "privacy_policy": "@@header.privacy_policy|fr:Confidentialité"
   },
   "proposal_card": {
     "next": "Seuraava ehdotus",
