--- a/apps/widget/i18n/hr.json
+++ b/apps/widget/i18n/hr.json
@@ -115,7 +115,8 @@
     "close": "Zatvori"
   },
   "header": {
-    "logo_alt": "Idi na početnu stranicu platforme Make.org"
+    "logo_alt": "Idi na početnu stranicu platforme Make.org",
+    "privacy_policy": "@@header.privacy_policy|fr:Confidentialité"
   },
   "proposal_card": {
     "next": "Sljedeći prijedlog",
