--- a/apps/widget/i18n/sk.json
+++ b/apps/widget/i18n/sk.json
@@ -113,7 +113,8 @@
     "close": "Zatvoriť "
   },
   "header": {
-    "logo_alt": "Prejsť na domovskú stránku Make.org"
+    "logo_alt": "Prejsť na domovskú stránku Make.org",
+    "privacy_policy": "@@header.privacy_policy|fr:Confidentialité"
   },
   "proposal_card": {
     "next": "Nasledujúci návrh",
