--- a/apps/front/i18n/it.json
+++ b/apps/front/i18n/it.json
@@ -1146,7 +1146,10 @@
       "title": "Collabora con Make.org",
       "subtitle": "Diventa partner",
       "description": "Lavoriamo con imprese, associazioni e istituzioni per portare avanti i nostri progetti. <br/>Accompagniamo anche queste organizzazioni per permettere loro di lanciare le proprie consultazioni.",
-      "button": "Scopri la nostra offerta"
+      "button": "Scopri la nostra offerta",
+      "collaborate": "@@homepage.partnership.collaborate|fr:Collaborer avec nous",
+      "start_project": "@@homepage.partnership.start_project|fr:Lancer un projet",
+      "join": "@@homepage.partnership.join|fr:Rejoindre une grande cause"
     },
     "international": {
       "subtitle": "Consultazioni nazionali",
