--- a/apps/front/i18n/nl.json
+++ b/apps/front/i18n/nl.json
@@ -1125,7 +1125,10 @@
       "title": "Werk samen met Make.org",
       "subtitle": "Partner worden",
       "description": "We werken samen met bedrijven, verenigingen en instellingen om onze projecten te bevorderen. <br/>We ondersteunen deze organisaties ook bij het opstarten van hun eigen raadplegingen.",
-      "button": "Ons aanbod bekijken"
+      "button": "Ons aanbod bekijken",
+      "collaborate": "@@homepage.partnership.collaborate|fr:Collaborer avec nous",
+      "start_project": "@@homepage.partnership.start_project|fr:Lancer un projet",
+      "join": "@@homepage.partnership.join|fr:Rejoindre une grande cause"
     },
     "international": {
       "subtitle": "Nationale raadplegingen",
