--- a/apps/front/i18n/bg.json
+++ b/apps/front/i18n/bg.json
@@ -1125,7 +1125,10 @@
       "title": "Да сътрудничим с Make.org",
       "subtitle": "Станете партньор",
       "description": "Ние работим с компании, сдружения и институции, за да развиваме нашите проекти. <br/>Подкрепяме тези организации и при започването на техни собствени консултации.",
-      "button": "Вижте нашите оферти"
+      "button": "Вижте нашите оферти",
+      "collaborate": "@@homepage.partnership.collaborate|fr:Collaborer avec nous",
+      "start_project": "@@homepage.partnership.start_project|fr:Lancer un projet",
+      "join": "@@homepage.partnership.join|fr:Rejoindre une grande cause"
     },
     "international": {
       "subtitle": "Национални консултации",
