--- a/apps/front/i18n/et.json
+++ b/apps/front/i18n/et.json
@@ -1144,7 +1144,10 @@
       "title": "Tehke Make.org‘iga koostööd",
       "subtitle": "Hakka partneriks",
       "description": "Me teeme oma projektide edendamiseks koostööd ettevõtete, ühingute ja institutsioonidega. <br/>Samuti aitame nendel organisatsioonidel oma isiklikke konsulteerimisi algatada.",
-      "button": "Meie pakkumised"
+      "button": "Meie pakkumised",
+      "collaborate": "@@homepage.partnership.collaborate|fr:Collaborer avec nous",
+      "start_project": "@@homepage.partnership.start_project|fr:Lancer un projet",
+      "join": "@@homepage.partnership.join|fr:Rejoindre une grande cause"
     },
     "international": {
       "subtitle": "Riiklikud konsulteerimised",
