--- a/apps/front/i18n/hr.json
+++ b/apps/front/i18n/hr.json
@@ -1165,7 +1165,10 @@
       "title": "Surađujte s inicijativom Make.org",
       "subtitle": "Postani partner",
       "description": "Radimo s poduzećima, udruženjima, institucijama kako bismo proveli svoje projekte. <br/>Također podržavamo te organizacije kako bismo im omogućili pokretanje vlastitih rasprava.",
-      "button": "Prikaži naše ponude"
+      "button": "Prikaži naše ponude",
+      "collaborate": "@@homepage.partnership.collaborate|fr:Collaborer avec nous",
+      "start_project": "@@homepage.partnership.start_project|fr:Lancer un projet",
+      "join": "@@homepage.partnership.join|fr:Rejoindre une grande cause"
     },
     "international": {
       "subtitle": "Nacionalne rasprave",
