--- a/apps/front/i18n/sk.json
+++ b/apps/front/i18n/sk.json
@@ -1165,7 +1165,10 @@
       "title": "Spolupracujte s Make.org",
       "subtitle": "Stať sa partnerom",
       "description": "Pri realizácii našich projektov spolupracujeme so spoločnosťami, združeniami a inštitúciami. <br/>Tieto organizácie podporujeme aj pri začatí ich vlastných konzultácií.",
-      "button": "Zobraziť naše ponuky"
+      "button": "Zobraziť naše ponuky",
+      "collaborate": "@@homepage.partnership.collaborate|fr:Collaborer avec nous",
+      "start_project": "@@homepage.partnership.start_project|fr:Lancer un projet",
+      "join": "@@homepage.partnership.join|fr:Rejoindre une grande cause"
     },
     "international": {
       "subtitle": "Národné konzultácie",
