--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1165,7 +1165,10 @@
       "title": "Співпрацювати з Make.org",
       "subtitle": "Стати партнером",
       "description": "Ми співпрацюємо з компаніями, асоціаціями й установами для просування наших проєктів. <br/>Ми також підтримуємо ці організації, щоб вони могли розпочати власні публічні консультації.",
-      "button": "Ознайомитися з нашими пропозиціями"
+      "button": "Ознайомитися з нашими пропозиціями",
+      "collaborate": "@@homepage.partnership.collaborate|fr:Collaborer avec nous",
+      "start_project": "@@homepage.partnership.start_project|fr:Lancer un projet",
+      "join": "@@homepage.partnership.join|fr:Rejoindre une grande cause"
     },
     "international": {
       "subtitle": "Національні публічні консультації",
