feat(assembly-ui): update onboarding and header
closes: MP-3761

--- a/apps/assembly-ui/i18n/de.json
+++ b/apps/assembly-ui/i18n/de.json
@@ -18,7 +18,8 @@
     "exploreText": "Eine gründliche Recherche zu den Themen, die dich interessieren.",
     "sources": "Zugriff auf verifizierte Quellen",
     "sourcesText": "Eine Anzeige der Quellen, auf denen jede Antwort der Künstlichen Intelligenz (KI) basiert.",
-    "openLabel": "Öffnen Sie das Dialogfenster"
+    "openLabel": "Öffnen Sie das Dialogfenster",
+    "proposal": "@@modal.proposal|fr:Quelles sont les propositions des participants ?"
   },
   "prompt": {
     "submit": "Senden",
