--- a/apps/assembly-ui/i18n/fr.json
+++ b/apps/assembly-ui/i18n/fr.json
@@ -14,11 +14,12 @@
     "openLabel": "Ouvrir la fenêtre de dialogue",
     "discover": "Découvrir l'outil",
     "suggestion": "Posez vos questions, l’intelligence artificielle (IA) vous répond",
-    "suggestionText": "Une réponse instantanée à toutes vos interrogations.",
+    "suggestionText": "Une réponse instantanée à vos questions.",
     "explore": "Explorez les contenus par thématique",
     "exploreText": "Une recherche approfondie sur les sujets qui vous intéressent.",
     "sources": "Accédez à des sources vérifiées",
-    "sourcesText": "Un affichage des sources qui ont alimenté chaque réponse de l’intelligence artificielle (IA)."
+    "sourcesText": "Un affichage des sources qui ont alimenté chaque réponse de l’intelligence artificielle (IA).",
+    "proposal": "Quelles sont les propositions des participants ?"
   },
   "prompt": {
     "submit": "Envoyer",
